specs/blueprints/errors/validation/expected_fields_got_list.eno
# Expecting fields but getting a list with one item

-- input
list:
- item
-- input

-- javascript
enolib.parse(input).fields('list');
-- javascript

-- php
Enolib\Parser::parse($input)->fields('list');
-- php

-- python
enolib.parse(input).fields('list')
-- python

-- ruby
Enolib.parse(input).fields('list')
-- ruby

## ValidationError

-- text
Only fields with the key 'list' were expected.
-- text

-- snippet
   Line | Content
 >    1 | list:
 *    2 | - item
-- snippet

selection: [0,0] => [1,6]


# Expecting fields but getting a list with empty lines and multiple items

-- input
list:

- item

- item

- item

-- input

-- javascript
enolib.parse(input).fields('list');
-- javascript

-- php
Enolib\Parser::parse($input)->fields('list');
-- php

-- python
enolib.parse(input).fields('list')
-- python

-- ruby
Enolib.parse(input).fields('list')
-- ruby

## ValidationError

-- text
Only fields with the key 'list' were expected.
-- text

-- snippet
   Line | Content
 >    1 | list:
 *    2 | 
 *    3 | - item
 *    4 | 
 *    5 | - item
 *    6 | 
 *    7 | - item
      8 | 
-- snippet

selection: [0,0] => [6,6]

# Expecting fields but getting a list with two items with comments

-- input
list:
> comment
- item

> comment
- item
-- input

-- javascript
enolib.parse(input).fields('list');
-- javascript

-- php
Enolib\Parser::parse($input)->fields('list');
-- php

-- python
enolib.parse(input).fields('list')
-- python

-- ruby
Enolib.parse(input).fields('list')
-- ruby

## ValidationError

-- text
Only fields with the key 'list' were expected.
-- text

-- snippet
   Line | Content
 >    1 | list:
 *    2 | > comment
 *    3 | - item
 *    4 | 
 *    5 | > comment
 *    6 | - item
-- snippet

selection: [0,0] => [5,6]
